# flask-web3-experiment

./: README.md  package-lock.json  package.json  pyproject.toml  settings.toml
flask_server/: app.py
flask_server/static/: app.js
flask_server/templates/: index.html
tests/: test_flask_server.py
truffle/: deploy.py
truffle/contracts/: greeter.sol
truffle/migrations/: 1_initial_migration.js  2_deploy_contracts.js
